<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_home"
    android:background="@color/icons"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.buba.nstouristguide.HomeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:dividerPadding="20dp"
        android:weightSum="5">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/location_on"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="20sp"
            android:gravity="center"
            android:textColor="@color/primary_dark"
            android:layout_margin="10dp"
            android:layout_weight="1"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_map"
            android:text="@string/btn_map_of_novi_sad"
            android:background="@color/primary"
            android:textColor="@color/accent"
            android:layout_margin="10dp"
            android:layout_weight="1"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_hs"
            android:text="@string/btn_hs"
            android:background="@color/primary"
            android:textColor="@color/accent"
            android:layout_margin="10dp"
            android:layout_weight="1"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_restaurants"
            android:text="@string/btn_restaurants"
            android:background="@color/primary"
            android:textColor="@color/accent"
            android:layout_margin="10dp"
            android:layout_weight="1"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_weather"
            android:text="@string/btn_forecast"
            android:background="@color/primary"
            android:textColor="@color/accent"
            android:layout_margin="10dp"
            android:layout_weight="1"/>
    </LinearLayout>
</RelativeLayout>
